[SW-1252] Fix differences in examples package